[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sdk-flowmetr"
version = "1.0.0"
description = "A modern Python SDK for greeting operations with comprehensive testing"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = []


[project.urls]
"Homepage" = "https://github.com/yourusername/hello-world-sdk"
"Bug Reports" = "https://github.com/yourusername/hello-world-sdk/issues"
"Source" = "https://github.com/yourusername/hello-world-sdk"

