[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flowmetr"
version = "1.0.0"
description = "FlowMetr Python client library"
readme = "README.md"
license = {text = "MIT License"}
authors = [
    {name = "Dennis Hansen", email = "dh@flowmetr.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = []


[project.urls]
"Homepage" = "https://FlowMetr.com"
"Bug Reports" = "https://github.com/FlowMetr/client-libraries/issues"
"Source" = "https://github.com/FlowMetr/client-libraries"

